module3/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warehouse
  labels:
    app-type: corp
