module3/sa-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: warehouse
spec:
  containers:
  - name: busybox
    image: busybox:1.28
    resources:
      requests:
        cpu: 100m
        memory: 50Mi
      limits:
        memory: 1Gi
    args:
    - sleep
    - "9999"
