module3/check-sa.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-sa
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: check-sa
      match:
        resources:
          kinds:
          - Pod
      validate:
        message: Default ServiceAccount is forbidden.
