module3/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: ns-owner
    match:
      any:
      - resources:
          kinds:
            - Namespace
    validate:
      message: The `owner` label is required for all Namespaces.
      pattern:
        metadata:
          labels:
            owner: "?*"
